# Machine_learming_Eva1

./: README.md  Untitled.ipynb  pyproject.toml  requirements.txt  test_catalog.py
conf/base/: catalog.yml
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb
proyect-machine/conf/base/: catalog.yml  parameters_new_pipeline.yml
proyect-machine/notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  Untitled.ipynb
proyect-machine/src/proyect_machine/: __init__.py
proyect-machine/tests/pipelines/new_pipeline/: test_pipeline.py
src/proyect_machine/: __main__.py  pipeline_registry.py  settings.py
src/proyect_machine/pipelines/data_engineering/: nodes.py  pipeline.py
src/proyect_machine/pipelines/data_science/: nodes.py  pipeline.py
src/proyect_machine/pipelines/movies_pipeline/: nodes.py  pipeline.py
